--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,9 @@
   <title>Admin</title>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+<script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+<script>
+  CMS.init({ configPath: 'config.yml' });
+</script>
 </body>
 </html>
