--- a/admin/index.html
+++ b/admin/index.html
@@ -6,9 +6,15 @@
     <title>Admin</title>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <!-- 1) Desliga o auto-init do Decap -->
+    <script>window.CMS_MANUAL_INIT = true;</script>
+
+    <!-- 2) Carrega o Decap (pode manter ^3, mas se preferir fixe 3.8.1) -->
+    <!-- <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script> -->
+    <script src="https://unpkg.com/decap-cms@3.8.1/dist/decap-cms.js"></script>
+
+    <!-- 3) Inicializa UMA vez apontando para o config.yml -->
     <script>
-      // Aponta explicitamente para o config.yml nesta pasta
       CMS.init({ configPath: 'config.yml' });
     </script>
   </body>
